[gd_scene load_steps=12 format=2]

[ext_resource path="res://Entities/Crab.tscn" type="PackedScene" id=1]
[ext_resource path="res://Entities/EyeballPlant.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Environment/GroundTileAlt.png" type="Texture" id=3]
[ext_resource path="res://Assets/Environment/VerticalGroundTransitionAlt.png" type="Texture" id=4]
[ext_resource path="res://Items/Potion.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Environment/Background1Alt.png" type="Texture" id=6]
[ext_resource path="res://World.gd" type="Script" id=7]
[ext_resource path="res://Assets/Environment/Background2Alt.png" type="Texture" id=8]
[ext_resource path="res://Assets/Environment/Background3Alt.png" type="Texture" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1554, 23 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 208, 94 )

[node name="World" type="Node2D"]
script = ExtResource( 7 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( -966, 0 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 3000, 180 )
region_filter_clip = true

[node name="StaticBody2D" type="StaticBody2D" parent="Background"]
position = Vector2( 514, 108 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/StaticBody2D"]
position = Vector2( 27, -15 )
shape = SubResource( 1 )

[node name="StaticBody2D2" type="StaticBody2D" parent="Background"]
position = Vector2( 514, 202 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/StaticBody2D2"]
position = Vector2( 27, -15 )
shape = SubResource( 1 )

[node name="StaticBody2D3" type="StaticBody2D" parent="Background"]
position = Vector2( -503, 275 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/StaticBody2D3"]
position = Vector2( -715, -158 )
shape = SubResource( 2 )

[node name="Environment" type="Node2D" parent="."]
position = Vector2( -491, 0 )

[node name="ColorRect" type="ColorRect" parent="Environment"]
margin_left = -2116.0
margin_top = 116.0
margin_right = 1657.0
margin_bottom = 194.0
color = Color( 0.137255, 0.0862745, 0.0862745, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Environment"]
margin_left = -2070.0
margin_top = 116.0
margin_right = 916.0
margin_bottom = 165.0
texture = ExtResource( 3 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VerticalTransition" type="Sprite" parent="Environment"]
position = Vector2( 905, 148 )
texture = ExtResource( 4 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="Environment"]

[node name="Back" type="ParallaxLayer" parent="Environment/ParallaxBackground"]
motion_scale = Vector2( 0.2, 1 )

[node name="TextureRect" type="TextureRect" parent="Environment/ParallaxBackground/Back"]
margin_left = -2269.0
margin_top = 21.0
margin_right = 1093.0
margin_bottom = 116.0
texture = ExtResource( 9 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mid" type="ParallaxLayer" parent="Environment/ParallaxBackground"]
motion_scale = Vector2( 0.5, 1 )

[node name="TextureRect" type="TextureRect" parent="Environment/ParallaxBackground/Mid"]
margin_left = -2266.0
margin_top = 21.0
margin_right = 1093.0
margin_bottom = 116.0
texture = ExtResource( 8 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fore" type="ParallaxLayer" parent="Environment/ParallaxBackground"]

[node name="TextureRect" type="TextureRect" parent="Environment/ParallaxBackground/Fore"]
margin_left = -2271.0
margin_top = 21.0
margin_right = 1661.0
margin_bottom = 116.0
texture = ExtResource( 6 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextLevel" type="Area2D" parent="Environment"]
position = Vector2( 922, 151 )

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="Environment/NextLevel"]
polygon = PoolVector2Array( -6, -35, -28, 14, -28, 29, 2, 29, 3, -35 )

[node name="Entities" type="YSort" parent="."]

[node name="Crab" parent="Entities" instance=ExtResource( 1 )]
position = Vector2( -1899, 138 )
potions = 3
attack_cooldown = 0.3

[node name="Obstacles" type="YSort" parent="Entities"]
position = Vector2( 1051, 134 )

[node name="EyeballPlant" parent="Entities" instance=ExtResource( 2 )]
position = Vector2( -790, 145 )

[node name="Potion" parent="Entities" instance=ExtResource( 5 )]
position = Vector2( -1697, 121 )

[node name="Potion2" parent="Entities" instance=ExtResource( 5 )]
position = Vector2( -1706, 146 )

[node name="Potion3" parent="Entities" instance=ExtResource( 5 )]
position = Vector2( -1682, 131 )

[node name="Potion4" parent="Entities" instance=ExtResource( 5 )]
position = Vector2( -1657, 122 )

[node name="Potion5" parent="Entities" instance=ExtResource( 5 )]
position = Vector2( -1665, 144 )

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = -2122.0
margin_top = 165.0
margin_right = 893.0
margin_bottom = 205.0
color = Color( 0.137255, 0.0862745, 0.0862745, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="Environment/NextLevel" to="." method="_on_NextLevel_body_entered"]
